@@ -3,7 +3,6 @@ plugins {
     id 'org.jetbrains.intellij' version '1.3.0'
     id 'org.jetbrains.grammarkit' version '2021.1.3'
     id 'net.saliman.properties' version '1.5.1'
-    id 'org.gradle.test-retry' version '1.3.1'
 }
 
 // The same as `--stacktrace` param
@@ -65,6 +64,10 @@ sourceSets {
     test.resources.srcDirs = ["resources/main", "resources/$platformVersion"]
 }
 
+dependencies {
+    testImplementation 'junit:junit:4.13.2'
+}
+
 buildPlugin {
     // Set proper name for final plugin zip.
     // Otherwise, base name is the same as gradle module name
@@ -88,4 +91,31 @@ runIde {
 // https://plugins.jetbrains.com/docs/intellij/api-changes-list.html
 runPluginVerifier {
     ideVersions = [ideaVersion]
+}
+
+test {
+    jvmArgs = ["-Xmx2g", "-XX:-OmitStackTraceInFastThrow"]
+    // needed for newer versions
+    if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_14.ordinal()) {
+        jvmArgs += [
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'jdk.unsupported/sun.misc=ALL-UNNAMED',
+                '--add-opens', 'java.desktop/sun.awt=ALL-UNNAMED',
+                '--add-opens', 'java.desktop/sun.font=ALL-UNNAMED',
+                '--add-opens', 'java.desktop/sun.swing=ALL-UNNAMED',
+                '--add-opens', 'java.desktop/sun.java2d=ALL-UNNAMED',
+                '--add-opens', 'java.desktop/java.awt=ALL-UNNAMED',
+                '--add-opens', 'java.desktop/java.awt.event=ALL-UNNAMED',
+                '--add-opens', 'java.desktop/javax.swing=ALL-UNNAMED',
+                '--add-opens', 'java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
+        ]
+    }
+    // We need to prevent the platform-specific shared JNA library to loading from the system library paths,
+    // because otherwise it can lead to compatibility issues.
+    // Also note that IDEA does the same thing at startup, and not only for tests.
+    systemProperty("jna.nosys", "true")
+    filter.failOnNoMatchingTests(false)
 }
